# tiger

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.88D55F27E36DB252.idx  type_map.hpp.FF953A6AB5C2533E.idx
include/tiger/: type_map.hpp  type_set.hpp
include/tiger/container/: type_map.hpp  type_set.hpp
include/tiger/simd/: short_string.hpp
include/tiger/stack/: stack_allocator.hpp
include/tiger/string/: fast_string.hpp  short_string.hpp
src/simd/: short_string.cpp
src/stack/: stack_allocator.cpp
src/string/: fast_string.cpp  short_string.cpp
src/types/: type_map.cpp  type_set.cpp
